@@ -5323,7 +5323,8 @@
      DONE;
     }
   operands[2] = gen_reg_rtx (DImode);
-  if (TARGET_POWERPC64 && TARGET_MFPGPR && TARGET_HARD_FLOAT && TARGET_FPRS)
+  if (TARGET_POWERPC64 && TARGET_MFPGPR && TARGET_HARD_FLOAT && TARGET_FPRS
+      && gpc_reg_operand(operands[0], GET_MODE (operands[0])))
     {
       operands[3] = gen_reg_rtx (DImode);
       emit_insn (gen_fix_truncdfsi2_internal_mfpgpr (operands[0], operands[1],
